--- a/main.html
+++ b/main.html
@@ -11,7 +11,7 @@
   <script type="module" src="https://www.gstatic.com/firebasejs/10.11.0/firebase-storage.js"></script>
 
   <!-- CSS for Floating Effects and Styles -->
-  <link rel="stylesheet" href="styles.css">
+  <link rel="stylesheet" href="CSS/styles.css">
 
   <!-- Main JS -->
   <script type="module" src="interface-bottom/main-bottom.js"></script>
