--- a/main.html
+++ b/main.html
@@ -167,6 +167,6 @@
   <script type="module" src="https://www.gstatic.com/firebasejs/9.6.1/firebase-app.js"></script>
   <script type="module" src="https://www.gstatic.com/firebasejs/9.6.1/firebase-auth.js"></script>
   <script type="module" src="https://www.gstatic.com/firebasejs/9.6.1/firebase-storage.js"></script>
-  <script src="inserface-bottom/main-bottom.js"></script>
+  <script src="bottom.js"></script>
 </body>
 </html>
