--- a/main.html
+++ b/main.html
@@ -151,22 +151,23 @@
 
   <!-- Bottom Navigation -->
   <div class="navigation">
-    <a href="#"><ion-icon name="home-outline"></ion-icon></a>
-    <a href="#"><ion-icon name="people-outline"></ion-icon></a>
+    <a href="#" id="homeBtn"><ion-icon name="home-outline"></ion-icon></a>
+    <a href="#" id="peopleBtn"><ion-icon name="people-outline"></ion-icon></a>
 
     <!-- Floating Add Button -->
     <div class="add-button">
       <ion-icon name="add-outline"></ion-icon>
     </div>
 
-    <a href="#"><ion-icon name="chatbubble-ellipses-outline"></ion-icon></a>
-    <a href="#"><ion-icon name="person-circle-outline"></ion-icon></a>
+    <a href="#" id="chatBtn"><ion-icon name="chatbubble-ellipses-outline"></ion-icon></a>
+    <a href="#" id="profileBtn"><ion-icon name="person-circle-outline"></ion-icon></a>
   </div>
 
   <!-- Firebase SDK -->
   <script type="module" src="https://www.gstatic.com/firebasejs/9.6.1/firebase-app.js"></script>
   <script type="module" src="https://www.gstatic.com/firebasejs/9.6.1/firebase-auth.js"></script>
   <script type="module" src="https://www.gstatic.com/firebasejs/9.6.1/firebase-storage.js"></script>
-  <script src="bottom.js"></script>
+  <script src="inserface-bottom/main-bottom.js"></script>
+
 </body>
 </html>
