--- a/registration.html
+++ b/registration.html
@@ -2,95 +2,138 @@
 <html lang="en">
 <head>
   <meta charset="UTF-8">
-  <title>Smart Burme - Register</title>
+  <title>Smart Burme - Registration</title>
+  <meta name="viewport" content="width=device-width, initial-scale=1.0">
+  <!-- Ionicons CDN -->
+  <script type="module" src="https://unpkg.com/ionicons@5.5.2/dist/ionicons/ionicons.esm.js"></script>
+  <script nomodule src="https://unpkg.com/ionicons@5.5.2/dist/ionicons/ionicons.js"></script>
+  <!-- Firebase SDK -->
+  <script src="https://www.gstatic.com/firebasejs/9.6.1/firebase-app-compat.js"></script>
+  <script src="https://www.gstatic.com/firebasejs/9.6.1/firebase-auth-compat.js"></script>
   <style>
     body {
       margin: 0;
       padding: 0;
-      background: linear-gradient(to right, #00c6ff, #0072ff);
-      font-family: Arial, sans-serif;
+      height: 100vh;
       display: flex;
       justify-content: center;
       align-items: center;
-      height: 100vh;
-      overflow: hidden;
+      background: linear-gradient(135deg, #209cff, #68e0cf);
+      font-family: Arial, sans-serif;
     }
-
     .container {
-      background: rgba(255, 255, 255, 0.1);
-      border-radius: 20px;
-      padding: 40px;
-      box-shadow: 0 8px 32px 0 rgba(31, 38, 135, 0.37);
-      backdrop-filter: blur(4px);
-      -webkit-backdrop-filter: blur(4px);
-      border: 1px solid rgba(255, 255, 255, 0.18);
-      text-align: center;
-      animation: float3D 4s ease-in-out infinite;
+      background: rgba(255,255,255,0.9);
+      padding: 40px 30px;
+      border-radius: 12px;
+      box-shadow: 0 4px 15px rgba(0,0,0,0.2);
+      width: 320px;
+      animation: floatUp 1s ease-out;
     }
-
-    @keyframes float3D {
-      0%, 100% { transform: translateY(0); }
-      50% { transform: translateY(-10px); }
+    @keyframes floatUp {
+      from { transform: translateY(20px); opacity: 0; }
+      to { transform: translateY(0); opacity: 1; }
     }
-
     h2 {
+      margin: 0 0 20px;
+      color: #333;
+      text-align: center;
+    }
+    .input-group {
+      position: relative;
+      margin-bottom: 20px;
+    }
+    .input-group ion-icon {
+      position: absolute;
+      left: 10px;
+      top: 50%;
+      transform: translateY(-50%);
+      color: #209cff;
+      font-size: 20px;
+    }
+    .input-group input {
+      width: 100%;
+      padding: 10px 10px 10px 40px;
+      border: 1px solid #ccc;
+      border-radius: 6px;
+      font-size: 16px;
+    }
+    .btn {
+      width: 100%;
+      padding: 12px;
+      background: #209cff;
       color: white;
-      margin-bottom: 30px;
-    }
-
-    input {
-      width: 250px;
-      padding: 10px;
-      margin: 10px;
       border: none;
-      border-radius: 10px;
-      outline: none;
-    }
-
-    button {
-      width: 250px;
-      padding: 10px;
-      margin-top: 15px;
-      background-color: #ffffff;
-      color: #0072ff;
-      border: none;
-      border-radius: 10px;
-      font-weight: bold;
+      border-radius: 6px;
+      font-size: 16px;
       cursor: pointer;
+      transition: background 0.3s;
     }
-
-    button:hover {
-      background-color: #e0e0e0;
+    .btn:hover {
+      background: #187fd2;
     }
-
-    .link {
-      margin-top: 20px;
-      color: #fff;
-      font-size: 14px;
+    .text-center {
+      text-align: center;
+      margin-top: 15px;
     }
-
-    .link a {
-      color: #ffd700;
+    .text-center a {
+      color: #209cff;
       text-decoration: none;
     }
   </style>
 </head>
 <body>
   <div class="container">
-    <h2>Create Account</h2>
-    <input type="email" id="email" placeholder="Email"><br>
-    <input type="password" id="password" placeholder="Password"><br>
-    <button onclick="registerUser(email.value, password.value)">Register</button>
-    <div class="link">
-      <p>Already have an account? <a href="login.html">Login</a></p>
+    <h2>Register</h2>
+    <div class="input-group">
+      <ion-icon name="mail-outline"></ion-icon>
+      <input type="email" id="email" placeholder="Email" required>
+    </div>
+    <div class="input-group">
+      <ion-icon name="lock-closed-outline"></ion-icon>
+      <input type="password" id="password" placeholder="Password" required>
+    </div>
+    <div class="input-group">
+      <ion-icon name="lock-closed-outline"></ion-icon>
+      <input type="password" id="confirmPassword" placeholder="Confirm Password" required>
+    </div>
+    <button class="btn" id="registerBtn">Register</button>
+    <div class="text-center">
+      <span>Already have an account? <a href="login.html">Login</a></span>
     </div>
   </div>
 
-  <!-- Firebase App -->
-  <script src="https://www.gstatic.com/firebasejs/9.6.10/firebase-app-compat.js"></script>
-  <script src="https://www.gstatic.com/firebasejs/9.6.10/firebase-auth-compat.js"></script>
+  <script>
+    // Firebase config
+    const firebaseConfig = {
+      apiKey: "AIzaSyAr7Hv2ApKtNTxF11MhT5cuWeg_Dgsh0TY",
+      authDomain: "smart-burme-app.firebaseapp.com",
+      projectId: "smart-burme-app",
+      storageBucket: "smart-burme-app.appspot.com",
+      messagingSenderId: "851502425686",
+      appId: "1:851502425686:web:f29e0e1dfa84794b4abdf7"
+    };
+    // Initialize Firebase
+    firebase.initializeApp(firebaseConfig);
+    const auth = firebase.auth();
 
-  <!-- auth.js -->
-  <script src="auth.js"></script>
+    // Register button event
+    document.getElementById('registerBtn').addEventListener('click', () => {
+      const email = document.getElementById('email').value;
+      const password = document.getElementById('password').value;
+      const confirmPassword = document.getElementById('confirmPassword').value;
+      if (password !== confirmPassword) {
+        alert('Passwords do not match');
+        return;
+      }
+      auth.createUserWithEmailAndPassword(email, password)
+        .then(userCredential => {
+          alert('Registration successful! Please login.');
+          window.location.href = 'login.html';
+        })
+        .catch(error => {
+          alert(error.message);
+        });
+    });
+  </script>
 </body>
 </html>
