--- a/login.html
+++ b/login.html
@@ -3,6 +3,13 @@
 <head>
   <meta charset="UTF-8">
   <title>Smart Burme - Login</title>
+  <meta name="viewport" content="width=device-width, initial-scale=1.0">
+  <!-- Ionicons CDN -->
+  <script type="module" src="https://unpkg.com/ionicons@5.5.2/dist/ionicons/ionicons.esm.js"></script>
+  <script nomodule src="https://unpkg.com/ionicons@5.5.2/dist/ionicons/ionicons.js"></script>
+  <!-- Firebase SDKs -->
+  <script src="https://www.gstatic.com/firebasejs/9.6.1/firebase-app-compat.js"></script>
+  <script src="https://www.gstatic.com/firebasejs/9.6.1/firebase-auth-compat.js"></script>
   <style>
     body {
       margin: 0;
@@ -24,11 +31,23 @@
       width: 300px;
     }
 
-    input[type="email"],
-    input[type="password"] {
+    .input-group {
+      position: relative;
+      margin-bottom: 20px;
+    }
+
+    .input-group ion-icon {
+      position: absolute;
+      left: 10px;
+      top: 50%;
+      transform: translateY(-50%);
+      color: #00ffff;
+      font-size: 20px;
+    }
+
+    .input-group input {
       width: 100%;
-      padding: 10px;
-      margin: 10px 0;
+      padding: 10px 10px 10px 40px;
       border: none;
       border-radius: 8px;
       background: rgba(255, 255, 255, 0.2);
@@ -63,18 +82,20 @@
 
 <div class="container">
   <h1>Smart Burme Login</h1>
-  <input type="email" id="email" placeholder="Email">
-  <input type="password" id="password" placeholder="Password">
+  <div class="input-group">
+    <ion-icon name="mail-outline"></ion-icon>
+    <input type="email" id="email" placeholder="Email">
+  </div>
+  <div class="input-group">
+    <ion-icon name="lock-closed-outline"></ion-icon>
+    <input type="password" id="password" placeholder="Password">
+  </div>
   <button onclick="signIn()">Sign In</button>
   <button onclick="register()">Register</button>
 </div>
 
-<!-- Firebase SDKs -->
-<script src="https://www.gstatic.com/firebasejs/10.8.1/firebase-app-compat.js"></script>
-<script src="https://www.gstatic.com/firebasejs/10.8.1/firebase-auth-compat.js"></script>
-
 <script>
-  // Firebase Configuration (Your info)
+  // Firebase Configuration
   const firebaseConfig = {
     apiKey: "AIzaSyAr7Hv2ApKtNTxF11MhT5cuWeg_Dgsh0TY",
     authDomain: "smart-burme-app.firebaseapp.com",
@@ -96,7 +117,7 @@
     auth.signInWithEmailAndPassword(email, password)
       .then((userCredential) => {
         alert('Sign In Successful!');
-        window.location.href = "main.html"; // login အောင်မြင်ရင် main.html သွားမယ်
+        window.location.href = "main.html";
       })
       .catch((error) => {
         alert(error.message);
