--- a/login.html
+++ b/login.html
@@ -2,14 +2,8 @@
 <html lang="en">
 <head>
   <meta charset="UTF-8">
+  <meta name="viewport" content="width=device-width, initial-scale=1">
   <title>Smart Burme - Login</title>
-  <meta name="viewport" content="width=device-width, initial-scale=1.0">
-  <!-- Ionicons CDN -->
-  <script type="module" src="https://unpkg.com/ionicons@5.5.2/dist/ionicons/ionicons.esm.js"></script>
-  <script nomodule src="https://unpkg.com/ionicons@5.5.2/dist/ionicons/ionicons.js"></script>
-  <!-- Firebase SDKs -->
-  <script src="https://www.gstatic.com/firebasejs/9.6.1/firebase-app-compat.js"></script>
-  <script src="https://www.gstatic.com/firebasejs/9.6.1/firebase-auth-compat.js"></script>
   <style>
     body {
       margin: 0;
@@ -17,52 +11,46 @@
       display: flex;
       justify-content: center;
       align-items: center;
-      background: url('background/login.jpg') no-repeat center center/cover;
-      font-family: Arial, sans-serif;
+      background: url('background/anime-boy.jpg') no-repeat center center/cover;
+      font-family: 'Segoe UI', sans-serif;
     }
 
     .container {
-      background: rgba(0, 0, 0, 0.6);
-      padding: 40px;
-      border-radius: 12px;
-      box-shadow: 0 0 20px #00ffff;
+      background: rgba(0, 0, 0, 0.7);
+      padding: 30px;
+      border-radius: 15px;
+      box-shadow: 0 0 20px cyan;
       text-align: center;
       color: white;
-      width: 300px;
+      width: 90%;
+      max-width: 320px;
     }
 
-    .input-group {
-      position: relative;
-      margin-bottom: 20px;
-    }
-
-    .input-group ion-icon {
-      position: absolute;
-      left: 10px;
-      top: 50%;
-      transform: translateY(-50%);
-      color: #00ffff;
-      font-size: 20px;
-    }
-
-    .input-group input {
+    input {
       width: 100%;
-      padding: 10px 10px 10px 40px;
+      padding: 12px;
+      margin: 10px 0;
       border: none;
       border-radius: 8px;
       background: rgba(255, 255, 255, 0.2);
       color: white;
+      font-size: 14px;
+    }
+
+    input::placeholder {
+      color: #ccc;
     }
 
     button {
       width: 100%;
-      padding: 10px;
+      padding: 12px;
       margin-top: 10px;
       border: none;
       border-radius: 8px;
       background: #00ffff;
       color: black;
       font-weight: bold;
+      font-size: 15px;
       cursor: pointer;
       transition: 0.3s;
     }
@@ -73,8 +61,8 @@
 
     h1 {
       margin-bottom: 20px;
-      font-size: 24px;
       color: #00ffff;
+      font-size: 22px;
     }
   </style>
 </head>
@@ -82,20 +70,17 @@
 
 <div class="container">
   <h1>Smart Burme Login</h1>
-  <div class="input-group">
-    <ion-icon name="mail-outline"></ion-icon>
-    <input type="email" id="email" placeholder="Email">
-  </div>
-  <div class="input-group">
-    <ion-icon name="lock-closed-outline"></ion-icon>
-    <input type="password" id="password" placeholder="Password">
-  </div>
+  <input type="email" id="email" placeholder="Email">
+  <input type="password" id="password" placeholder="Password">
   <button onclick="signIn()">Sign In</button>
-  <button onclick="register()">Register</button>
+  <button onclick="goToRegister()">Register</button>
 </div>
 
+<!-- Firebase SDK -->
+<script src="https://www.gstatic.com/firebasejs/10.8.1/firebase-app-compat.js"></script>
+<script src="https://www.gstatic.com/firebasejs/10.8.1/firebase-auth-compat.js"></script>
+
 <script>
-  // Firebase Configuration
   const firebaseConfig = {
     apiKey: "AIzaSyAr7Hv2ApKtNTxF11MhT5cuWeg_Dgsh0TY",
     authDomain: "smart-burme-app.firebaseapp.com",
@@ -105,37 +90,28 @@
     appId: "1:851502425686:web:f29e0e1dfa84794b4abdf7"
   };
 
-  // Initialize Firebase
   firebase.initializeApp(firebaseConfig);
   const auth = firebase.auth();
 
-  // Sign In Function
   function signIn() {
     const email = document.getElementById('email').value;
     const password = document.getElementById('password').value;
 
     auth.signInWithEmailAndPassword(email, password)
       .then((userCredential) => {
-        alert('Sign In Successful!');
+        alert("Login successful!");
         window.location.href = "main.html";
       })
       .catch((error) => {
-        alert(error.message);
+        alert("Wrong password or user not found. Redirecting to forgot page...");
+        setTimeout(() => {
+          window.location.href = "forget-password.html";
+        }, 2000);
       });
   }
 
-  // Register Function
-  function register() {
-    const email = document.getElementById('email').value;
-    const password = document.getElementById('password').value;
-
-    auth.createUserWithEmailAndPassword(email, password)
-      .then((userCredential) => {
-        alert('Registration Successful! You can Sign In now.');
-      })
-      .catch((error) => {
-        alert(error.message);
-      });
+  function goToRegister() {
+    window.location.href = "registration.html";
   }
 </script>
 
