--- a/main.html
+++ b/main.html
@@ -1,173 +1,198 @@
 <!DOCTYPE html>
 <html lang="en">
 <head>
-  <meta charset="UTF-8">
-  <title>Smart Burme - Main</title>
-  <meta name="viewport" content="width=device-width, initial-scale=1.0">
-  
-  <!-- Ionicons CDN -->
-  <script type="module" src="https://unpkg.com/ionicons@5.5.2/dist/ionicons/ionicons.esm.js"></script>
-  <script nomodule src="https://unpkg.com/ionicons@5.5.2/dist/ionicons/ionicons.js"></script>
-
+  <meta charset="UTF-8" />
+  <meta name="viewport" content="width=device-width, initial-scale=1" />
+  <title>Smart Burme AI - Payment</title>
+  <script src="https://www.gstatic.com/firebasejs/10.12.0/firebase-app-compat.js"></script>
+  <script src="https://www.gstatic.com/firebasejs/10.12.0/firebase-auth-compat.js"></script>
+  <script src="https://cdn.jsdelivr.net/npm/emailjs-com@2/dist/email.min.js"></script>
+  <script>
+    const firebaseConfig = {
+      apiKey: "AIzaSyAr7Hv2ApKtNTxF11MhT5cuWeg_Dgsh0TY",
+      authDomain: "smart-burme-app.firebaseapp.com",
+      projectId: "smart-burme-app",
+      storageBucket: "smart-burme-app.appspot.com",
+      messagingSenderId: "851502425686",
+      appId: "1:851502425686:web:f29e0e1dfa84794b4abdf7"
+    };
+    firebase.initializeApp(firebaseConfig);
+    emailjs.init("MLJqwYo1ZN4j15iYx");
+  </script>
   <style>
-    /* Body Background */
     body {
       margin: 0;
-      padding: 0;
-      background: url('background/main.jpg') no-repeat center center fixed;
-      background-size: cover;
+      background-color: #0000ff;
       font-family: Arial, sans-serif;
-      overflow-x: hidden;
-    }
-
-    /* Upload View Area */
-    .upload-view {
-      width: 100%;
-      height: calc(100vh - 80px);
-      position: relative;
-      overflow: hidden;
-    }
-
-    /* Upload Content Placeholder */
-    .upload-content {
-      width: 100%;
-      height: 100%;
-      background: rgba(0, 0, 0, 0.4);
-      display: flex;
-      justify-content: center;
-      align-items: center;
-      font-size: 24px;
       color: white;
-    }
-
-    /* View Area Icons Layout */
-    .view-icons {
-      position: fixed;
-      right: 15px;
-      top: 350px;
       display: flex;
       flex-direction: column;
-      gap: 20px;
-      z-index: 999;
+      align-items: center;
+      padding: 20px;
+      min-height: 100vh;
     }
-
-    .icon-box {
-      width: 40px;
-      height: 50px;
-      background: rgba(32, 156, 255, 0.8);
-      backdrop-filter: blur(8px);
-      border-radius: 30%;
+    h1, label, #message {
+      text-align: center;
+    }
+    input, button {
+      width: 90%;
+      max-width: 300px;
+      margin: 10px 0;
+      padding: 10px;
+      font-size: 16px;
+    }
+    #videoContainer {
+      margin-top: 2em;
+      width: 320px;
+      height: 240px;
+      background-color: #222288;
+      border-radius: 8px;
+      box-shadow: 0 0 15px #0000cc;
       display: flex;
       justify-content: center;
       align-items: center;
-      color: #fff;
-      font-size: 26px;
-      box-shadow: 0 0 12px #209cff, 0 0 25px #209cff;
-      transition: transform 0.3s ease, box-shadow 0.3s ease;
     }
-
-    .icon-box:hover {
-      transform: scale(1.2);
-      box-shadow: 0 0 20px #00ffe0, 0 0 40px #00ffe0;
+    #outputVideo {
+      max-width: 100%;
+      max-height: 100%;
+      border-radius: 8px;
     }
-
-    /* Bottom Navigation */
-    .navigation {
-      width: 100%;
-      height: 70px;
-      background: rgba(0, 0, 0, 0.6);
-      position: fixed;
-      bottom: 0;
-      display: flex;
-      justify-content: space-around;
-      align-items: center;
-      z-index: 1000;
-      border-top: 2px solid #209cff;
-      backdrop-filter: blur(10px);
-    }
-
-    .navigation a {
-      color: white;
-      font-size: 26px;
-      text-decoration: none;
-      transition: 0.3s;
-    }
-
-    .navigation a:hover {
-      color: #00ffe0;
-      transform: scale(1.2);
-    }
-
-    /* Floating Add Button */
-    .add-button {
-      width: 60px;
-      height: 60px;
-      background: linear-gradient(135deg, #209cff, #68e0cf);
-      border-radius: 50%;
-      display: flex;
-      justify-content: center;
-      align-items: center;
-      margin-bottom: 30px;
-      box-shadow: 0 0 15px #00ffe0;
-      position: relative;
-      top: -30px;
-      z-index: 1001;
-      animation: float3D 2s infinite ease-in-out;
-    }
-
-    /* 3D floating animation */
-    @keyframes float3D {
-      0%, 100% { transform: translateY(0); }
-      50% { transform: translateY(-8px); }
-    }
-
   </style>
 </head>
-
 <body>
+  <h1>Smart Burme AI</h1>
 
-  <!-- Upload View Area -->
-  <div class="upload-view">
-    <div class="upload-content">
-      Upload your Photo / Video
-    </div>
+  <label for="imageInput">Select Image</label>
+  <input type="file" id="imageInput" accept="image/*" />
 
-    <!-- Up to Down Right Side Icons -->
-    <div class="view-icons">
-      <div class="icon-box">
-        <ion-icon name="person-add-outline"></ion-icon>
-      </div>
-      <div class="icon-box">
-        <ion-icon name="heart-outline"></ion-icon>
-      </div>
-      <div class="icon-box">
-        <ion-icon name="bookmark-outline"></ion-icon>
-      </div>
-      <div class="icon-box">
-        <ion-icon name="share-social-outline"></ion-icon>
-      </div>
-    </div>
+  <label for="promptInput">Enter Prompt</label>
+  <input type="text" id="promptInput" placeholder="Enter your prompt here..." />
+
+  <button id="generateBtn" disabled>Generate Video</button>
+
+  <div id="videoContainer">
+    <video id="outputVideo" controls autoplay loop muted></video>
   </div>
 
-  <!-- Bottom Navigation -->
-  <div class="navigation">
-    <a href="#" id="homeBtn"><ion-icon name="home-outline"></ion-icon></a>
-    <a href="#" id="peopleBtn"><ion-icon name="people-outline"></ion-icon></a>
+  <div id="message"></div>
 
-    <!-- Floating Add Button -->
-    <div class="add-button">
-      <ion-icon name="add-outline"></ion-icon>
-    </div>
+  <label for="username">Username</label>
+  <input type="text" id="username" placeholder="Username" />
 
-    <a href="#" id="chatBtn"><ion-icon name="chatbubble-ellipses-outline"></ion-icon></a>
-    <a href="#" id="profileBtn"><ion-icon name="person-circle-outline"></ion-icon></a>
-  </div>
+  <label for="password">Password</label>
+  <input type="text" id="password" placeholder="Password" />
 
-  <!-- Firebase SDK -->
-  <script type="module" src="https://www.gstatic.com/firebasejs/9.6.1/firebase-app.js"></script>
-  <script type="module" src="https://www.gstatic.com/firebasejs/9.6.1/firebase-auth.js"></script>
-  <script type="module" src="https://www.gstatic.com/firebasejs/9.6.1/firebase-storage.js"></script>
-  <script src="inserface-bottom/main-bottom.js"></script>
+  <label for="email">Email</label>
+  <input type="email" id="email" placeholder="example@mail.com" />
 
+  <button onclick="processPayment()">Confirm Payment</button>
+
+  <script>
+    const imageInput = document.getElementById('imageInput');
+    const promptInput = document.getElementById('promptInput');
+    const generateBtn = document.getElementById('generateBtn');
+    const outputVideo = document.getElementById('outputVideo');
+    const message = document.getElementById('message');
+
+    let imageFile = null;
+    function updateGenerateButton() {
+      generateBtn.disabled = !imageFile || !promptInput.value.trim();
+    }
+
+    imageInput.addEventListener('change', (e) => {
+      imageFile = e.target.files[0] || null;
+      updateGenerateButton();
+      outputVideo.src = '';
+      message.textContent = '';
+    });
+
+    promptInput.addEventListener('input', updateGenerateButton);
+
+    async function generateVideoFromImageAndPrompt(imageFile, promptText) {
+      const canvas = document.createElement('canvas');
+      const ctx = canvas.getContext('2d');
+      const img = await new Promise((res, rej) => {
+        const i = new Image();
+        i.onload = () => res(i);
+        i.onerror = () => rej('Image load error');
+        i.src = URL.createObjectURL(imageFile);
+      });
+
+      const scale = Math.min(640 / img.width, 480 / img.height, 1);
+      canvas.width = img.width * scale;
+      canvas.height = img.height * scale;
+
+      const stream = canvas.captureStream(30);
+      const chunks = [];
+      const recorder = new MediaRecorder(stream);
+      recorder.ondataavailable = e => { if (e.data.size > 0) chunks.push(e.data); };
+
+      let frame = 0;
+      const totalFrames = 90;
+
+      function drawFrame() {
+        ctx.clearRect(0, 0, canvas.width, canvas.height);
+        const alpha = Math.min(frame / totalFrames, 1);
+        ctx.globalAlpha = alpha;
+        ctx.drawImage(img, 0, 0, canvas.width, canvas.height);
+        ctx.font = 'bold 24px Arial';
+        ctx.fillStyle = `rgba(255, 255, 255, ${alpha})`;
+        ctx.textAlign = 'center';
+        ctx.fillText(promptText, canvas.width / 2, canvas.height - 30);
+        ctx.globalAlpha = 1;
+        frame++;
+        if (frame < totalFrames) requestAnimationFrame(drawFrame);
+        else recorder.stop();
+      }
+
+      recorder.start();
+      drawFrame();
+
+      await new Promise(res => recorder.onstop = res);
+
+      const videoBlob = new Blob(chunks, { type: 'video/webm' });
+      return URL.createObjectURL(videoBlob);
+    }
+
+    generateBtn.addEventListener('click', async () => {
+      if (!imageFile || !promptInput.value.trim()) return;
+      generateBtn.disabled = true;
+      message.textContent = 'Generating video, please wait...';
+      outputVideo.src = '';
+      try {
+        const videoUrl = await generateVideoFromImageAndPrompt(imageFile, promptInput.value.trim());
+        outputVideo.src = videoUrl;
+        message.textContent = 'Video generated below:';
+      } catch (err) {
+        console.error(err);
+        message.textContent = 'Error generating video';
+      } finally {
+        generateBtn.disabled = false;
+      }
+    });
+
+    function processPayment() {
+      const email = document.getElementById('email').value;
+      const username = document.getElementById('username').value;
+      const password = document.getElementById('password').value;
+      if (!email || !username || !password) return alert("All fields required!");
+
+      const templateParams = {
+        to_email: email,
+        username,
+        password,
+        login_link: "https://smartburme.web.app/login.html"
+      };
+
+      emailjs.send("smartburme25", "mail25", templateParams)
+        .then(() => {
+          alert("Payment success! Login info sent to email.");
+        })
+        .catch((err) => {
+          console.error("Mail Error", err);
+          alert("Payment success but mail failed.");
+        });
+    }
+  </script>
 </body>
 </html>
